--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "version": 2,
     "builds": [
       { "src": "frontend/package.json", "use": "@vercel/next" },
-      { "src": "backend/package.json", "use": "@vercel/node" }
+      { "src": "backend/app.js", "use": "@vercel/node" }
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/backend/$1" },
       { "src": "/(.*)", "dest": "/frontend/$1" }
     ]
-  }
+}
   
