--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,27 @@
 {
     "version": 2,
     "builds": [
-      { "src": "frontend/package.json", "use": "@vercel/next" },
-      { "src": "backend/app.js", "use": "@vercel/node" }
+      {
+        "src": "frontend/package.json",
+        "use": "@vercel/next",
+        "config": {
+          "distDir": "frontend/.next"
+        }
+      },
+      {
+        "src": "backend/package.json",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/backend/$1" },
-      { "src": "/(.*)", "dest": "/frontend/$1" }
+      {
+        "src": "/api/(.*)",
+        "dest": "backend/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "frontend/$1"
+      }
     ]
-}
+  }
   
