--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,6 @@
   "version": 2,
   "builds": [
     {
-      "src": "frontend/package.json",
-      "use": "@vercel/next",
-      "config": {
-        "distDir": "frontend/.next"
-      }
-    },
-    {
       "src": "backend/app.js",
       "use": "@vercel/node"
     }
@@ -16,11 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "frontend/$1"
+      "dest": "backend/app.js"
     }
   ]
 }
